Comment Issue Adjusted

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*BASIC STYLESHEET LAYOUT FOR THE DICE THROWING PAGE*/
+/*BASIC STYLESHEET LAYOUT FOR THE LIGHT SWITCH PAGE*/
 
 /*Setting the page color*/
 body{
